--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-	"homepage": "https://0romanshevchuk0.github.io/Online-Store/",
+  "homepage": "https://0romanshevchuk0.github.io/Online-Store/",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-		"deploy": "gh-pages -d dist",
-		"predeploy": "npm run build"
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
