--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
